Reformat and make pipeline end in reasonable time