@@ -5,6 +5,8 @@ import cz.cyberrange.platform.commons.security.impl.CustomAuthenticationEntryPoi
 import cz.cyberrange.platform.commons.security.impl.UserInfoAuthenticationProvider;
 import cz.cyberrange.platform.commons.security.impl.UserInfoValidator;
 import cz.cyberrange.platform.commons.webclient.config.WebClientConfigSecurityCommons;
+import java.util.Collections;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
@@ -25,74 +27,93 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.servlet.HandlerExceptionResolver;
 
-import java.util.Collections;
-import java.util.List;
-
-/**
- * Configuration of Spring Security beans in production and developer mode.
- */
+/** Configuration of Spring Security beans in production and developer mode. */
 @Configuration
 @Import(WebClientConfigSecurityCommons.class)
 @EnableMethodSecurity
 @EnableWebSecurity
-@ComponentScan(basePackages = {"cz.cyberrange.platform.commons.security.config", "cz.cyberrange.platform.commons.security.impl"})
+@ComponentScan(
+    basePackages = {
+      "cz.cyberrange.platform.commons.security.config",
+      "cz.cyberrange.platform.commons.security.impl"
+    })
 public class ResourceServerSecurityConfig {
 
-    private final UserInfoValidator userInfoValidator;
-    private final AuthorityGranter authorityGranter;
+  private final UserInfoValidator userInfoValidator;
+  private final AuthorityGranter authorityGranter;
 
-    @Value("#{'${cors.allowed.origins:#{*}}'.split(',')}")
-    private List<String> corsAllowedOrigins;
+  @Value("#{'${cors.allowed.origins:#{*}}'.split(',')}")
+  private List<String> corsAllowedOrigins;
 
-    /**
-     * Instantiates a new ResourceServerSecurityConfig.
-     */
-    public ResourceServerSecurityConfig(UserInfoValidator userInfoValidator, AuthorityGranter authorityGranter) {
-        this.userInfoValidator = userInfoValidator;
-        this.authorityGranter = authorityGranter;
-    }
+  /** Instantiates a new ResourceServerSecurityConfig. */
+  public ResourceServerSecurityConfig(
+      UserInfoValidator userInfoValidator, AuthorityGranter authorityGranter) {
+    this.userInfoValidator = userInfoValidator;
+    this.authorityGranter = authorityGranter;
+  }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
+  @Bean
+  public AuthenticationManager authenticationManager(AuthenticationConfiguration config)
+      throws Exception {
+    return config.getAuthenticationManager();
+  }
 
-    @Bean
-    public UserInfoAuthenticationProvider userInfoAuthenticationProvider() {
-        return new UserInfoAuthenticationProvider(authorityGranter, userInfoValidator);
-    }
+  @Bean
+  public UserInfoAuthenticationProvider userInfoAuthenticationProvider() {
+    return new UserInfoAuthenticationProvider(authorityGranter, userInfoValidator);
+  }
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, AuthenticationManager authenticationManager, HandlerExceptionResolver handlerExceptionResolver) throws Exception {
-        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .cors(cors -> cors.configure(http))
-                .csrf(csrf -> csrf.ignoringRequestMatchers(request -> {
-                    String auth = request.getHeader("Authorization");
-                    return auth != null && auth.startsWith("Bearer ");
-                }))
-                .addFilterBefore(new BearerTokenAuthenticationFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(authz -> authz.requestMatchers("/webjars/**", "/microservices").permitAll().anyRequest().authenticated())
-                .exceptionHandling(ex -> ex.authenticationEntryPoint(customAuthenticationEntryPoint(handlerExceptionResolver)));
+  @Bean
+  public SecurityFilterChain filterChain(
+      HttpSecurity http,
+      AuthenticationManager authenticationManager,
+      HandlerExceptionResolver handlerExceptionResolver)
+      throws Exception {
+    http.sessionManagement(
+            session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .cors(cors -> cors.configure(http))
+        .csrf(
+            csrf ->
+                csrf.ignoringRequestMatchers(
+                    request -> {
+                      String auth = request.getHeader("Authorization");
+                      return auth != null && auth.startsWith("Bearer ");
+                    }))
+        .addFilterBefore(
+            new BearerTokenAuthenticationFilter(authenticationManager),
+            UsernamePasswordAuthenticationFilter.class)
+        .authorizeHttpRequests(
+            authz ->
+                authz
+                    .requestMatchers("/webjars/**", "/microservices")
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated())
+        .exceptionHandling(
+            ex ->
+                ex.authenticationEntryPoint(
+                    customAuthenticationEntryPoint(handlerExceptionResolver)));
 
-        return http.build();
-    }
+    return http.build();
+  }
 
-    @Bean
-    public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(false);
-        config.setMaxAge(3600L);
-        config.setExposedHeaders(List.of("authorization"));
-        config.setAllowedOrigins(Collections.unmodifiableList(corsAllowedOrigins));
-        config.setAllowedHeaders(List.of("content-type", "authorization", "x-auth-token"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
-    }
+  @Bean
+  public CorsFilter corsFilter() {
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    CorsConfiguration config = new CorsConfiguration();
+    config.setAllowCredentials(false);
+    config.setMaxAge(3600L);
+    config.setExposedHeaders(List.of("authorization"));
+    config.setAllowedOrigins(Collections.unmodifiableList(corsAllowedOrigins));
+    config.setAllowedHeaders(List.of("content-type", "authorization", "x-auth-token"));
+    config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+    source.registerCorsConfiguration("/**", config);
+    return new CorsFilter(source);
+  }
 
-    @Bean
-    public AuthenticationEntryPoint customAuthenticationEntryPoint(HandlerExceptionResolver handlerExceptionResolver) {
-        return new CustomAuthenticationEntryPoint(handlerExceptionResolver);
-    }
+  @Bean
+  public AuthenticationEntryPoint customAuthenticationEntryPoint(
+      HandlerExceptionResolver handlerExceptionResolver) {
+    return new CustomAuthenticationEntryPoint(handlerExceptionResolver);
+  }
 }
